<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AddSchoolStep2Activity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#0077CC"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <!--ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/submitMoins"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_remove_circle_outline_white_24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" /-->

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/plus"
                android:focusable="true"
                android:onClick="cliplus()"
                android:clickable="true"
                android:src="@drawable/ic_add_circle_outline_white_24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/libelleFormation_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_formation"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/prompt_formation"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/prixFormation_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Frais_formation"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/Frais_formation"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text|numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>




            <android.support.v7.widget.RecyclerView
                android:id="@+id/rve"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="200dp">
            </android.support.v7.widget.RecyclerView>


            <Button
                android:id="@+id/next2button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Send"/>





        </LinearLayout>





    </ScrollView>



</LinearLayout>
